# COR-Pass

./: .gitignore  Dockerfile  README.md  development.env  docker-compose.yml  logs.log.2024-07-07_07-44  logs.log.2024-07-07_07-46  logs.log.2024-07-07_07-47  logs.log.2024-07-07_07-50  loki-config.yaml  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements.txt  sql_auth.db
cor_pass/: schemas.py
cor_pass/config/: config.py
cor_pass/database/: db.py  models.py
cor_pass/repository/: ambulance.py  cor_id.py  devices.py  illness.py  medical_data.py  otp_auth.py  password_generator.py  person.py  records.py  tags.py  users.py
cor_pass/routes/: admin.py  ambulance.py  auth.py  cor_id.py  devices.py  illness.py  medical_data.py  otp_auth.py  password_generator.py  person.py  records.py  tags.py  users.py
cor_pass/services/: access.py  auth.py  cipher.py  cor_otp.py  email.py  logger.py  qr_code.py  recovery_file.py  words.py
cor_pass/static/: Cor-Id.html  forgot-password.html  login.html  mainscreen.html  password_manager.html  signup.html  styles.css  translation.js
cor_pass/templates/: email_templates.html  forgot_password_email_template.html  recovery_code.html
loki/index/uploader/: name
